--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,10 @@
     <string name="title_activity_pprod">Pprod</string>
     <string name="title_activity_sdiet">Sdiet</string>
     <string name="title_activity_pdiet">Pdiet</string>
+    <string name="item1">Item1</string>
+    <string name="item2">Item2</string>
+    <string name="item3">Item3</string>
+    <string name="item4">Item4</string>
+    <string name="title_activity_creation">Creation</string>
 
 </resources>
